separation html & js
separation html & js

--- a/test.html
+++ b/test.html
@@ -7,21 +7,21 @@
 
     <body>
         <h1> showPic</h1>
-        <ul>
+        <ul id="imagegallery">
             <li>
-                <a href="images/0.jpg" onclick="showPic(this); return false;" title="A snow mountain" >Snow mountain</a>
+                <a href="images/0.jpg"  title="A snow mountain" >Snow mountain</a>
             </li>
 
             <li>
-                <a href="images/1.jpg" onclick="showPic(this); return false;" title="A mountain Lake" >Mountain Lake</a>
+                <a href="images/1.jpg"  title="A mountain Lake" >Mountain Lake</a>
             </li>
 
             <li>
-                <a href="images/2.jpg" onclick="showPic(this); return false;" title="A Snow mountain Lake " >Snow mountain Lake</a>
+                <a href="images/2.jpg"  title="A Snow mountain Lake " >Snow mountain Lake</a>
             </li>
 
             <li>
-                <a href="images/3.jpg" onclick="showPic(this); return false;" title="A Mountain Road" >Mountain Road</a>
+                <a href="images/3.jpg"  title="A Mountain Road" >Mountain Road</a>
             </li>
 
         </ul>
