--- a/test.html
+++ b/test.html
@@ -3,30 +3,39 @@
         <meta http-equiv="content-type" content="text/html" charset="utf-8">
         <title>Picture list</title>
         <script src="Src/example.js"> </script>
+        <link rel="stylesheet" href="style.css" type="text/css" media="screen"/>
+        
     </head>
 
     <body>
         <h1> showPic</h1>
         <ul id="imagegallery">
             <li>
-                <a href="images/0.jpg"  title="A snow mountain" >Snow mountain</a>
+                <a href="images/0.jpg"  title="A snow mountain" >
+                    <img src="images/0-0.jpg" alt="Snow mountain"/>
+                </a>
             </li>
 
             <li>
-                <a href="images/1.jpg"  title="A mountain Lake" >Mountain Lake</a>
+                <a href="images/1.jpg"  title="A mountain Lake" >
+                    <img src="images/1-1.jpg" alt="Mountain Lake"/>
+                </a>
             </li>
 
             <li>
-                <a href="images/2.jpg"  title="A Snow mountain Lake " >Snow mountain Lake</a>
+                <a href="images/2.jpg"  title="A Snow mountain Lake " >
+                    <img src="images/2-2.jpg" alt="Snow mountain Lake"/>
+                </a>
             </li>
 
             <li>
-                <a href="images/3.jpg"  title="A Mountain Road" >Mountain Road</a>
+                <a href="images/3.jpg"  title="A Mountain Road" >
+                    <img src="images/3-3.jpg" alt="Mountain Road"/>
+                </a>
             </li>
 
         </ul>
         <p id="description"> Choose an image.</p>
         <img id="placeholder" src="images/4.jpg" alt="my image gallery"/>
     </body>
-
 </html>
