--- a/test.html
+++ b/test.html
@@ -8,6 +8,8 @@
     </head>
 
     <body>
+
+        <div>
         <h1> showPic</h1>
         <ul id="imagegallery">
             <li>
@@ -25,17 +27,14 @@
             <li>
                 <a href="images/2.jpg"  title="A Snow mountain Lake " >
                     <img src="images/2-2.jpg" alt="Snow mountain Lake"/>
-                </a>
-            </li>
-
-            <li>
-                <a href="images/3.jpg"  title="A Mountain Road" >
-                    <img src="images/3-3.jpg" alt="Mountain Road"/>
-                </a>
+                </a> 
             </li>
 
         </ul>
-        <p id="description"> Choose an image.</p>
-        <img id="placeholder" src="images/4.jpg" alt="my image gallery"/>
+        </div>
+        <div id="testdiv">
+            <p id="description"> Choose an image.</p>
+            <img id="placeholder" src="images/4.jpg" alt="my image gallery"/>
+        </div>
     </body>
 </html>
